@@ -6,15 +6,19 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Mockito.when;
 import static org.mockito.MockitoAnnotations.openMocks;
 import static uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType.ABOUT_TO_START;
 import static uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.EventType.APPEAL_RECEIVED;
-import static uk.gov.hmcts.reform.sscs.util.SscsUtil.calculateDueDateWorkingDays;
+import static uk.gov.hmcts.reform.sscs.util.CommunicationRequestTestHelper.buildCommRequest;
+import static uk.gov.hmcts.reform.sscs.util.CommunicationRequestTestHelper.buildCommRequestNotActionedResponseDateOffset;
+import static uk.gov.hmcts.reform.sscs.util.CommunicationRequestTestHelper.buildCustomCommRequest;
 
+import java.io.IOException;
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -28,11 +32,13 @@ import uk.gov.hmcts.reform.sscs.ccd.callback.PreSubmitCallbackResponse;
 import uk.gov.hmcts.reform.sscs.ccd.domain.*;
 import uk.gov.hmcts.reform.sscs.idam.IdamService;
 import uk.gov.hmcts.reform.sscs.idam.UserDetails;
+import uk.gov.hmcts.reform.sscs.idam.UserRole;
+import uk.gov.hmcts.reform.sscs.service.BusinessDaysCalculatorService;
 
 class TribunalCommunicationAboutToSubmitHandlerTest {
 
     private static final String USER_AUTHORISATION = "Bearer token";
-    TribunalCommunicationAboutToSubmitHandler handler;
+    private TribunalCommunicationAboutToSubmitHandler handler;
 
     private SscsCaseData sscsCaseData;
 
@@ -45,11 +51,14 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
     @Mock
     private IdamService idamService;
 
+    @Mock
+    private BusinessDaysCalculatorService businessDaysCalculatorService;
+
     @BeforeEach
     void setUp() {
         openMocks(this);
 
-        handler = new TribunalCommunicationAboutToSubmitHandler(idamService, true);
+        handler = new TribunalCommunicationAboutToSubmitHandler(idamService, businessDaysCalculatorService);
 
         sscsCaseData = SscsCaseData.builder().ccdCaseId("ccdId").build();
 
@@ -81,7 +90,7 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
     }
 
     @Test
-    void givenValidTribunalRequest_shouldAddNewCommunicationToList() {
+    void givenValidTribunalRequest_shouldAddNewCommunicationToList() throws IOException {
         // Setup Tribunal communication fields
         CommunicationRequestTopic expectedTopic = CommunicationRequestTopic.APPEAL_TYPE;
         String expectedQuestion = "Test Question";
@@ -90,8 +99,8 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         // Create empty list of communications
         List<CommunicationRequest> existingComs = new ArrayList<>();
         FtaCommunicationFields details = FtaCommunicationFields.builder()
-            .tribunalRequestTopic(expectedTopic)
-            .tribunalRequestQuestion(expectedQuestion)
+            .commRequestTopic(expectedTopic)
+            .commRequestQuestion(expectedQuestion)
             .tribunalCommunications(existingComs)
             .tribunalRequestType(TribunalRequestType.NEW_REQUEST)
             .build();
@@ -103,6 +112,8 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
             .name(expectedUserName)
             .build();
         when(idamService.getUserDetails(USER_AUTHORISATION)).thenReturn(userDetails);
+        when(businessDaysCalculatorService.getBusinessDay(any(LocalDate.class), anyInt()))
+            .thenReturn(LocalDate.now().plusDays(2));
 
         // Execute the function
         PreSubmitCallbackResponse<SscsCaseData> response =
@@ -119,43 +130,21 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         assertEquals(expectedUserName, addedCom.getRequestUserName());
         assertNotNull(addedCom.getRequestDateTime());
         assertNotNull(addedCom.getRequestResponseDueDate());
-        LocalDate date = calculateDueDateWorkingDays(LocalDate.now(), 2);
+        LocalDate date = LocalDate.now().plusDays(2);
         assertEquals(date, addedCom.getRequestResponseDueDate());
         assertEquals(date, response.getData().getCommunicationFields().getTribunalResponseDueDate());
-    }
-
-    @Test
-    void givenFlagOff_shouldDoNothing() {
-        List<CommunicationRequest> existingComs = new ArrayList<>();
-        FtaCommunicationFields details = FtaCommunicationFields.builder()
-            .tribunalRequestTopic(CommunicationRequestTopic.APPEAL_TYPE)
-            .tribunalRequestQuestion("someQuestion")
-            .tribunalCommunications(existingComs)
-            .tribunalRequestType(TribunalRequestType.NEW_REQUEST)
-            .build();
-
-        sscsCaseData.setCommunicationFields(details);
-        handler = new TribunalCommunicationAboutToSubmitHandler(idamService, false);
-
-        PreSubmitCallbackResponse<SscsCaseData> response =
-            handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
-
-        List<CommunicationRequest> resultComs = response.getData().getCommunicationFields().getTribunalCommunications();
-        assertEquals(0, resultComs.size());
-        assertNull(response.getData().getCommunicationFields().getTribunalResponseDueDate());
     }
 
     @Test
     void givenNoRequestType_shouldDoNothing() {
         List<CommunicationRequest> existingComs = new ArrayList<>();
         FtaCommunicationFields details = FtaCommunicationFields.builder()
-            .tribunalRequestTopic(CommunicationRequestTopic.APPEAL_TYPE)
-            .tribunalRequestQuestion("someQuestion")
+            .commRequestTopic(CommunicationRequestTopic.APPEAL_TYPE)
+            .commRequestQuestion("someQuestion")
             .tribunalCommunications(existingComs)
             .build();
 
         sscsCaseData.setCommunicationFields(details);
-        handler = new TribunalCommunicationAboutToSubmitHandler(idamService, false);
 
         PreSubmitCallbackResponse<SscsCaseData> response =
             handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
@@ -165,35 +154,21 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
     }
 
     @Test
-    void givenValidTribunalRequest_shouldAddNewCommunicationToPopulatedList() {
+    void givenValidTribunalRequest_shouldAddNewCommunicationToPopulatedList() throws IOException {
         // Setup Tribunal communication fields
         CommunicationRequestTopic expectedTopic = CommunicationRequestTopic.APPEAL_TYPE;
         String expectedQuestion = "Test Question";
         String expectedUserName = "Test User";
 
         // Create list of existing communications
-        CommunicationRequest tribunalCommunicationPast = CommunicationRequest.builder().value(
-            CommunicationRequestDetails.builder()
-                .requestTopic(CommunicationRequestTopic.OTHER_PARTY_PERSONAL_INFORMATION)
-                .requestMessage("Past existing Question")
-                .requestDateTime(LocalDateTime.now().minusYears(2))
-                .requestUserName("Past existing user")
-                .requestResponseDueDate(LocalDate.now().minusYears(1))
-                .build()
-        ).build();
-        CommunicationRequest tribunalCommunicationFuture = CommunicationRequest.builder().value(
-            CommunicationRequestDetails.builder()
-                .requestTopic(CommunicationRequestTopic.APPOINTEE_PERSONAL_INFORMATION)
-                .requestMessage("Future existing Question")
-                .requestDateTime(LocalDateTime.now().plusYears(1))
-                .requestUserName("Future existing user")
-                .requestResponseDueDate(LocalDate.now().plusYears(2))
-                .build()
-        ).build();
+        CommunicationRequest tribunalCommunicationPast = buildCustomCommRequest("Past existing Question",
+            "Past existing user", -2, -1);
+        CommunicationRequest tribunalCommunicationFuture = buildCustomCommRequest("Future existing Question",
+            "Future existing user", 1, 2);
         List<CommunicationRequest> existingComs = new ArrayList<>(List.of(tribunalCommunicationFuture, tribunalCommunicationPast));
         FtaCommunicationFields details = FtaCommunicationFields.builder()
-            .tribunalRequestTopic(expectedTopic)
-            .tribunalRequestQuestion(expectedQuestion)
+            .commRequestTopic(expectedTopic)
+            .commRequestQuestion(expectedQuestion)
             .tribunalRequestType(TribunalRequestType.NEW_REQUEST)
             .tribunalCommunications(existingComs)
             .build();
@@ -203,8 +178,11 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         // Mock user details
         UserDetails userDetails = UserDetails.builder()
             .name(expectedUserName)
+            .roles(List.of(UserRole.CTSC_CLERK.getValue()))
             .build();
         when(idamService.getUserDetails(USER_AUTHORISATION)).thenReturn(userDetails);
+        when(businessDaysCalculatorService.getBusinessDay(LocalDate.now(), 2))
+            .thenReturn(LocalDate.now().plusDays(2));
 
         // Execute the function
         PreSubmitCallbackResponse<SscsCaseData> response =
@@ -220,9 +198,10 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         assertEquals(expectedTopic, addedCom.getRequestTopic());
         assertEquals(expectedQuestion, addedCom.getRequestMessage());
         assertEquals(expectedUserName, addedCom.getRequestUserName());
+        assertEquals(UserRole.CTSC_CLERK.getLabel(), addedCom.getRequestUserRole());
         assertNotNull(addedCom.getRequestDateTime());
         assertEquals(tribunalCommunicationPast, resultComs.getLast());
-        assertEquals(calculateDueDateWorkingDays(LocalDate.now(), 2), addedCom.getRequestResponseDueDate());
+        assertEquals(LocalDate.now().plusDays(2), addedCom.getRequestResponseDueDate());
         assertEquals(LocalDate.now().minusYears(1), response.getData().getCommunicationFields().getTribunalResponseDueDate());
     }
 
@@ -234,8 +213,8 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         String expectedUserName = "Test User";
 
         FtaCommunicationFields details = FtaCommunicationFields.builder()
-            .tribunalRequestTopic(expectedTopic)
-            .tribunalRequestQuestion(expectedQuestion)
+            .commRequestTopic(expectedTopic)
+            .commRequestQuestion(expectedQuestion)
             .tribunalRequestType(TribunalRequestType.NEW_REQUEST)
             .tribunalCommunications(null) // Explicitly set to null
             .build();
@@ -245,6 +224,7 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         // Mock user details
         UserDetails userDetails = UserDetails.builder()
             .name(expectedUserName)
+            .roles(List.of(UserRole.IBCA.getValue()))
             .build();
         when(idamService.getUserDetails(USER_AUTHORISATION)).thenReturn(userDetails);
 
@@ -256,29 +236,34 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         List<CommunicationRequest> resultComs = response.getData().getCommunicationFields().getTribunalCommunications();
 
         assertNotNull(resultComs);
+        assertEquals(1, resultComs.size());
+
+        CommunicationRequestDetails addedCom = resultComs.getFirst().getValue();
+        assertEquals(expectedTopic, addedCom.getRequestTopic());
+        assertEquals(expectedQuestion, addedCom.getRequestMessage());
+        assertEquals(expectedUserName, addedCom.getRequestUserName());
+        assertEquals(UserRole.IBCA.getLabel(), addedCom.getRequestUserRole());
+        assertNotNull(addedCom.getRequestDateTime());
     }
 
     @Test
     void shouldHandleReplyToTribunalQueryWithReplyText() {
-        String chosenRequestId = "1";
         String replyText = "Reply text";
 
-        CommunicationRequest communicationRequest = CommunicationRequest.builder()
-            .id(chosenRequestId)
-            .value(CommunicationRequestDetails.builder().build())
-            .build();
-        DynamicListItem chosenTribunalRequest = new DynamicListItem(chosenRequestId, "item");
-        DynamicList tribunalRequestNoResponseRadioDl = new DynamicList(chosenTribunalRequest, Collections.singletonList(chosenTribunalRequest));
+        CommunicationRequest communicationRequest = buildCommRequest();
+        DynamicListItem chosenTribunalRequest = new DynamicListItem(communicationRequest.getId(), "item");
+        DynamicList tribunalRequestsDl = new DynamicList(chosenTribunalRequest, Collections.singletonList(chosenTribunalRequest));
         FtaCommunicationFields ftaCommunicationFields = FtaCommunicationFields.builder()
-            .tribunalRequestNoResponseRadioDl(tribunalRequestNoResponseRadioDl)
+            .tribunalRequestsDl(tribunalRequestsDl)
             .ftaCommunications(List.of(communicationRequest))
-            .tribunalRequestNoResponseTextArea(replyText)
-            .tribunalRequestNoResponseNoAction(Collections.emptyList())
+            .commRequestResponseTextArea(replyText)
+            .commRequestResponseNoAction(Collections.emptyList())
             .tribunalRequestType(TribunalRequestType.REPLY_TO_TRIBUNAL_QUERY)
             .build();
         sscsCaseData.setCommunicationFields(ftaCommunicationFields);
         String userName = "Test User";
-        when(idamService.getUserDetails(USER_AUTHORISATION)).thenReturn(UserDetails.builder().name(userName).build());
+        when(idamService.getUserDetails(USER_AUTHORISATION)).thenReturn(UserDetails.builder()
+            .name(userName).roles(List.of(UserRole.IBCA.getValue())).build());
 
         PreSubmitCallbackResponse<SscsCaseData> response =
             handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
@@ -289,41 +274,31 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         assertNotNull(request.getRequestReply());
         assertEquals(replyText, request.getRequestReply().getReplyMessage());
         assertEquals(userName, request.getRequestReply().getReplyUserName());
+        assertEquals(UserRole.IBCA.getLabel(), request.getRequestReply().getReplyUserRole());
         assertNotNull(request.getRequestReply().getReplyDateTime());
         assertNull(request.getRequestResponseDueDate());
-        assertEquals(LocalDate.now(), response.getData().getCommunicationFields().getTribunalResponseProvidedDate());
+        assertEquals(LocalDate.now(), response.getData().getCommunicationFields().getFtaResponseProvidedDate());
     }
 
     @Test
-    void shouldUpdateTribunalResponseProvidedDateOnHandleReplyToTribunalQueryIfExistingInFuture() {
-        String chosenTribunalRequestId = "1";
+    void shouldUpdateFtaResponseProvidedDateOnHandleReplyToTribunalQueryIfExistingInFuture() {
         String replyText = "Reply text";
 
-        CommunicationRequest communicationRequest = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId)
-            .value(CommunicationRequestDetails.builder().build())
-            .build();
-        CommunicationRequest communicationRequest2 = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId)
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActioned(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now().plusYears(1))
-                    .build())
-                .build())
-            .build();
-        DynamicListItem chosenTribunalRequest = new DynamicListItem(chosenTribunalRequestId, "item");
-        DynamicList ftaRequestNoResponseRadioDl = new DynamicList(chosenTribunalRequest, Collections.singletonList(chosenTribunalRequest));
+        CommunicationRequest communicationRequest = buildCommRequest();
+        CommunicationRequest communicationRequest2 = buildCommRequestNotActionedResponseDateOffset(1, true);
+        DynamicListItem chosenTribunalRequest = new DynamicListItem(communicationRequest.getId(), "item");
+        DynamicList ftaRequestsDl = new DynamicList(chosenTribunalRequest, Collections.singletonList(chosenTribunalRequest));
         FtaCommunicationFields ftaCommunicationFields = FtaCommunicationFields.builder()
-            .tribunalRequestNoResponseRadioDl(ftaRequestNoResponseRadioDl)
+            .tribunalRequestsDl(ftaRequestsDl)
             .ftaCommunications(List.of(communicationRequest, communicationRequest2))
-            .tribunalRequestNoResponseTextArea(replyText)
-            .tribunalRequestNoResponseNoAction(Collections.emptyList())
+            .commRequestResponseTextArea(replyText)
+            .commRequestResponseNoAction(Collections.emptyList())
             .tribunalRequestType(TribunalRequestType.REPLY_TO_TRIBUNAL_QUERY)
             .build();
         sscsCaseData.setCommunicationFields(ftaCommunicationFields);
         String userName = "Test User";
-        when(idamService.getUserDetails(USER_AUTHORISATION)).thenReturn(UserDetails.builder().name(userName).build());
+        when(idamService.getUserDetails(USER_AUTHORISATION)).thenReturn(UserDetails.builder()
+            .name(userName).roles(List.of(UserRole.CTSC_CLERK.getValue())).build());
 
         PreSubmitCallbackResponse<SscsCaseData> response =
             handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
@@ -334,41 +309,31 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         assertNotNull(request.getRequestReply());
         assertEquals(replyText, request.getRequestReply().getReplyMessage());
         assertEquals(userName, request.getRequestReply().getReplyUserName());
+        assertEquals(UserRole.CTSC_CLERK.getLabel(), request.getRequestReply().getReplyUserRole());
         assertNotNull(request.getRequestReply().getReplyDateTime());
         assertNull(request.getRequestResponseDueDate());
-        assertEquals(LocalDate.now(), response.getData().getCommunicationFields().getTribunalResponseProvidedDate());
+        assertEquals(LocalDate.now(), response.getData().getCommunicationFields().getFtaResponseProvidedDate());
     }
 
     @Test
-    void shouldNotUpdateTribunalResponseProvidedDateOnHandleReplyToTribunalQueryIfExistingInPast() {
-        String chosenTribunalRequestId = "1";
+    void shouldNotUpdateFtaResponseProvidedDateOnHandleReplyToTribunalQueryIfExistingInPast() {
         String replyText = "Reply text";
 
-        CommunicationRequest communicationRequest = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId)
-            .value(CommunicationRequestDetails.builder().build())
-            .build();
-        CommunicationRequest communicationRequest2 = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId)
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActioned(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now().minusYears(1))
-                    .build())
-                .build())
-            .build();
-        DynamicListItem chosenTribunalRequest = new DynamicListItem(chosenTribunalRequestId, "item");
-        DynamicList tribunalRequestNoResponseRadioDl = new DynamicList(chosenTribunalRequest, Collections.singletonList(chosenTribunalRequest));
+        CommunicationRequest communicationRequest = buildCommRequest();
+        CommunicationRequest communicationRequest2 = buildCommRequestNotActionedResponseDateOffset(-1, true);
+        DynamicListItem chosenTribunalRequest = new DynamicListItem(communicationRequest.getId(), "item");
+        DynamicList tribunalRequestsDl = new DynamicList(chosenTribunalRequest, Collections.singletonList(chosenTribunalRequest));
         FtaCommunicationFields ftaCommunicationFields = FtaCommunicationFields.builder()
-            .tribunalRequestNoResponseRadioDl(tribunalRequestNoResponseRadioDl)
+            .tribunalRequestsDl(tribunalRequestsDl)
             .ftaCommunications(List.of(communicationRequest, communicationRequest2))
-            .tribunalRequestNoResponseTextArea(replyText)
-            .tribunalRequestNoResponseNoAction(Collections.emptyList())
+            .commRequestResponseTextArea(replyText)
+            .commRequestResponseNoAction(Collections.emptyList())
             .tribunalRequestType(TribunalRequestType.REPLY_TO_TRIBUNAL_QUERY)
             .build();
         sscsCaseData.setCommunicationFields(ftaCommunicationFields);
         String userName = "Test User";
-        when(idamService.getUserDetails(USER_AUTHORISATION)).thenReturn(UserDetails.builder().name(userName).build());
+        when(idamService.getUserDetails(USER_AUTHORISATION)).thenReturn(UserDetails.builder()
+            .name(userName).roles(List.of(UserRole.SUPER_USER.getValue())).build());
 
         PreSubmitCallbackResponse<SscsCaseData> response =
             handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
@@ -379,32 +344,29 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         assertNotNull(request.getRequestReply());
         assertEquals(replyText, request.getRequestReply().getReplyMessage());
         assertEquals(userName, request.getRequestReply().getReplyUserName());
+        assertEquals(UserRole.SUPER_USER.getLabel(), request.getRequestReply().getReplyUserRole());
         assertNotNull(request.getRequestReply().getReplyDateTime());
         assertNull(request.getRequestResponseDueDate());
-        assertEquals(LocalDate.now().minusYears(1), response.getData().getCommunicationFields().getTribunalResponseProvidedDate());
+        assertEquals(LocalDate.now().minusYears(1), response.getData().getCommunicationFields().getFtaResponseProvidedDate());
     }
 
     @Test
     void shouldHandleReplyToTribunalQueryWithNoActionRequired() {
-        String chosenTribunalRequestId = "1";
+        CommunicationRequest communicationRequest = buildCommRequest();
 
-        CommunicationRequest communicationRequest = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId)
-            .value(CommunicationRequestDetails.builder().build())
-            .build();
-
-        DynamicListItem chosenTribunalRequest = new DynamicListItem(chosenTribunalRequestId, "item");
-        DynamicList tribunalRequestNoResponseRadioDl = new DynamicList(chosenTribunalRequest, Collections.singletonList(chosenTribunalRequest));
+        DynamicListItem chosenTribunalRequest = new DynamicListItem(communicationRequest.getId(), "item");
+        DynamicList tribunalRequestsDl = new DynamicList(chosenTribunalRequest, Collections.singletonList(chosenTribunalRequest));
         FtaCommunicationFields ftaCommunicationFields = FtaCommunicationFields.builder()
-            .tribunalRequestNoResponseRadioDl(tribunalRequestNoResponseRadioDl)
+            .tribunalRequestsDl(tribunalRequestsDl)
             .ftaCommunications(List.of(communicationRequest))
-            .tribunalRequestNoResponseNoAction(Collections.singletonList("No action required"))
+            .commRequestResponseNoAction(Collections.singletonList("No action required"))
             .tribunalRequestType(TribunalRequestType.REPLY_TO_TRIBUNAL_QUERY)
             .build();
         ftaCommunicationFields.setTribunalResponseDueDate(LocalDate.of(1, 1, 1));
         sscsCaseData.setCommunicationFields(ftaCommunicationFields);
         String userName = "Test User";
-        when(idamService.getUserDetails(USER_AUTHORISATION)).thenReturn(UserDetails.builder().name(userName).build());
+        when(idamService.getUserDetails(USER_AUTHORISATION)).thenReturn(UserDetails.builder()
+            .name(userName).roles(List.of(UserRole.TCW.getValue())).build());
 
         PreSubmitCallbackResponse<SscsCaseData> response =
             handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
@@ -415,8 +377,9 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         assertNotNull(request.getRequestReply());
         assertEquals("No action required", request.getRequestReply().getReplyMessage());
         assertEquals(userName, request.getRequestReply().getReplyUserName());
+        assertEquals(UserRole.TCW.getLabel(), request.getRequestReply().getReplyUserRole());
         assertNotNull(request.getRequestReply().getReplyDateTime());
-        assertNull(communicationRequest.getValue().getRequestReply().getReplyHasBeenActioned());
+        assertNull(communicationRequest.getValue().getRequestReply().getReplyHasBeenActionedByFta());
         assertNull(communicationRequest.getValue().getRequestResponseDueDate());
         assertNull(response.getData().getCommunicationFields().getFtaResponseDueDate());
         assertNull(response.getData().getCommunicationFields().getTribunalResponseProvidedDate());
@@ -424,34 +387,16 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
 
     @Test
     void shouldNotWipeFiltersAfterHandleReplyToTribunalQueryWhenRequestNoReplyExists() {
-        String chosenTribunalRequestId = "1";
-        String chosenTribunalRequestId2 = "2";
+        CommunicationRequest communicationRequest = buildCustomCommRequest("", "", 0, 0);
+        CommunicationRequest communicationRequest2 = buildCustomCommRequest("", "", 0, 1);
+        CommunicationRequest communicationRequest3 = buildCustomCommRequest("", "", 0, 2);
 
-        CommunicationRequest communicationRequest = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId)
-            .value(CommunicationRequestDetails.builder()
-                .requestResponseDueDate(LocalDate.of(2, 2, 2))
-                .build())
-            .build();
-        CommunicationRequest communicationRequest2 = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId2)
-            .value(CommunicationRequestDetails.builder()
-                .requestResponseDueDate(LocalDate.of(3, 3, 3))
-                .build())
-            .build();
-        CommunicationRequest communicationRequest3 = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId2)
-            .value(CommunicationRequestDetails.builder()
-                .requestResponseDueDate(LocalDate.of(4, 4, 4))
-                .build())
-            .build();
-
-        DynamicListItem chosenTribunalRequest = new DynamicListItem(chosenTribunalRequestId, "item");
-        DynamicList tribunalRequestNoResponseRadioDl = new DynamicList(chosenTribunalRequest, List.of(chosenTribunalRequest));
+        DynamicListItem chosenTribunalRequest = new DynamicListItem(communicationRequest.getId(), "item");
+        DynamicList tribunalRequestsDl = new DynamicList(chosenTribunalRequest, List.of(chosenTribunalRequest));
         FtaCommunicationFields ftaCommunicationFields = FtaCommunicationFields.builder()
-            .tribunalRequestNoResponseRadioDl(tribunalRequestNoResponseRadioDl)
+            .tribunalRequestsDl(tribunalRequestsDl)
             .ftaCommunications(List.of(communicationRequest, communicationRequest3, communicationRequest2))
-            .tribunalRequestNoResponseNoAction(Collections.singletonList("No action required"))
+            .commRequestResponseNoAction(Collections.singletonList("No action required"))
             .tribunalRequestType(TribunalRequestType.REPLY_TO_TRIBUNAL_QUERY)
             .build();
         ftaCommunicationFields.setTribunalResponseDueDate(LocalDate.of(1, 1, 1));
@@ -470,7 +415,7 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         assertEquals(userName, request.getRequestReply().getReplyUserName());
         assertNotNull(request.getRequestReply().getReplyDateTime());
         assertNull(communicationRequest.getValue().getRequestResponseDueDate());
-        assertEquals(LocalDate.of(3, 3, 3), response.getData().getCommunicationFields().getFtaResponseDueDate());
+        assertEquals(LocalDate.now().plusYears(1), response.getData().getCommunicationFields().getFtaResponseDueDate());
     }
 
     @Test
@@ -478,11 +423,11 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         String chosenTribunalRequestId = "1";
 
         DynamicListItem chosenTribunalRequest = new DynamicListItem(chosenTribunalRequestId, "item");
-        DynamicList tribunalRequestNoResponseRadioDl = new DynamicList(chosenTribunalRequest, Collections.singletonList(chosenTribunalRequest));
+        DynamicList tribunalRequestsDl = new DynamicList(chosenTribunalRequest, Collections.singletonList(chosenTribunalRequest));
         FtaCommunicationFields ftaCommunicationFields = FtaCommunicationFields.builder()
-            .tribunalRequestNoResponseRadioDl(tribunalRequestNoResponseRadioDl)
+            .tribunalRequestsDl(tribunalRequestsDl)
             .ftaCommunications(Collections.emptyList())
-            .tribunalRequestNoResponseNoAction(Collections.singletonList("No action required"))
+            .commRequestResponseNoAction(Collections.singletonList("No action required"))
             .tribunalRequestType(TribunalRequestType.REPLY_TO_TRIBUNAL_QUERY)
             .build();
         sscsCaseData.setCommunicationFields(ftaCommunicationFields);
@@ -498,49 +443,42 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
     @CsvSource(value = {"NEW_REQUEST", "null"}, nullValues = "null")
     void shouldClearFieldsAtEndOfEvent(TribunalRequestType requestType) {
         FtaCommunicationFields communicationFields = FtaCommunicationFields.builder()
-            .tribunalRequestTopic(CommunicationRequestTopic.APPEAL_TYPE)
-            .tribunalRequestQuestion("someQuestion")
+            .commRequestTopic(CommunicationRequestTopic.APPEAL_TYPE)
+            .commRequestQuestion("someQuestion")
             .tribunalRequestType(requestType)
-            .tribunalRequestNoResponseNoAction(List.of("something"))
+            .commRequestResponseNoAction(List.of("something"))
             .tribunalRequestNoResponseQuery("something")
-            .tribunalRequestNoResponseRadioDl(new DynamicList(null, Collections.emptyList()))
-            .tribunalRequestNoResponseTextArea("something")
-            .tribunalRequestRespondedQuery("something")
-            .tribunalRequestRespondedReply("something")
-            .tribunalRequestRespondedDl(new DynamicList(null, Collections.emptyList()))
-            .tribunalRequestRespondedActioned(YesNo.NO)
+            .ftaRequestsToReviewDl(new DynamicMixedChoiceList(null, Collections.emptyList()))
+            .commRequestResponseTextArea("something")
+            .ftaRequestsDl(new DynamicList(null, Collections.emptyList()))
             .build();
         sscsCaseData.setCommunicationFields(communicationFields);
 
         PreSubmitCallbackResponse<SscsCaseData> response =
             handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertNull(response.getData().getCommunicationFields().getTribunalRequestTopic());
-        assertNull(response.getData().getCommunicationFields().getTribunalRequestQuestion());
+        assertNull(response.getData().getCommunicationFields().getCommRequestTopic());
+        assertNull(response.getData().getCommunicationFields().getCommRequestQuestion());
         assertNull(response.getData().getCommunicationFields().getTribunalRequestType());
-        assertNull(response.getData().getCommunicationFields().getTribunalRequestNoResponseNoAction());
-        assertNull(response.getData().getCommunicationFields().getTribunalRequestNoResponseRadioDl());
+        assertNull(response.getData().getCommunicationFields().getCommRequestResponseNoAction());
+        assertNull(response.getData().getCommunicationFields().getFtaRequestsDl());
         assertNull(response.getData().getCommunicationFields().getTribunalRequestNoResponseQuery());
-        assertNull(response.getData().getCommunicationFields().getTribunalRequestNoResponseTextArea());
-        assertNull(response.getData().getCommunicationFields().getTribunalRequestRespondedQuery());
-        assertNull(response.getData().getCommunicationFields().getTribunalRequestRespondedReply());
-        assertNull(response.getData().getCommunicationFields().getTribunalRequestRespondedDl());
-        assertNull(response.getData().getCommunicationFields().getTribunalRequestRespondedActioned());
+        assertNull(response.getData().getCommunicationFields().getCommRequestResponseTextArea());
+        assertNull(response.getData().getCommunicationFields().getFtaRequestsToReviewDl());
+        assertNull(response.getData().getCommunicationFields().getTribunalRequestsDl());
     }
 
     @Test
     void shouldHandleReviewTribunalReplyWithNoMoreReviewsNeeded() {
-        CommunicationRequest communicationRequest = CommunicationRequest.builder()
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActioned(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now()).build()).build()).build();
+        CommunicationRequest communicationRequest = buildCommRequestNotActionedResponseDateOffset(0, true);
+        CommunicationRequest communicationRequest2 = buildCommRequestNotActionedResponseDateOffset(1, true);
         DynamicListItem dynamicListItem = new DynamicListItem(communicationRequest.getId(), "item");
-        DynamicList dynamicList = new DynamicList(dynamicListItem, Collections.singletonList(dynamicListItem));
+        DynamicListItem dynamicListItem2 = new DynamicListItem(communicationRequest2.getId(), "item2");
+        DynamicMixedChoiceList dynamicList = new DynamicMixedChoiceList(List.of(dynamicListItem2, dynamicListItem), List.of(dynamicListItem2, dynamicListItem));
         FtaCommunicationFields communicationFields = FtaCommunicationFields.builder()
             .tribunalRequestType(TribunalRequestType.REVIEW_TRIBUNAL_REPLY)
-            .tribunalRequestRespondedDl(dynamicList)
-            .tribunalCommunications(Collections.singletonList(communicationRequest))
+            .ftaRequestsToReviewDl(dynamicList)
+            .tribunalCommunications(List.of(communicationRequest, communicationRequest2))
             .ftaResponseProvidedDate(LocalDate.now())
             .build();
         sscsCaseData.setCommunicationFields(communicationFields);
@@ -550,36 +488,25 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
 
         List<CommunicationRequest> resultComs = response.getData().getCommunicationFields().getTribunalCommunications();
         assertNotNull(resultComs);
-        assertEquals(1, resultComs.size());
-        CommunicationRequestDetails resultCom = resultComs.getFirst().getValue();
-        assertEquals(YesNo.YES, resultCom.getRequestReply().getReplyHasBeenActioned());
+        assertEquals(2, resultComs.size());
+        assertEquals(YesNo.YES, resultComs.getFirst().getValue().getRequestReply().getReplyHasBeenActionedByFta());
+        assertEquals(YesNo.YES, resultComs.getLast().getValue().getRequestReply().getReplyHasBeenActionedByFta());
         assertNull(response.getData().getCommunicationFields().getFtaResponseProvidedDate());
     }
 
     @Test
     void shouldHandleReviewTribunalReplyWithOlderReviewStillNeeded() {
-        CommunicationRequest communicationRequest1 = CommunicationRequest.builder()
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActioned(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now().plusYears(1)).build()).build()).build();
-        CommunicationRequest communicationRequest2 = CommunicationRequest.builder()
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActioned(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now()).build()).build()).build();
-        CommunicationRequest communicationRequest3 = CommunicationRequest.builder()
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActioned(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now().minusYears(1)).build()).build()).build();
+        CommunicationRequest communicationRequest1 = buildCommRequestNotActionedResponseDateOffset(1, true);
+        CommunicationRequest communicationRequest2 = buildCommRequestNotActionedResponseDateOffset(0, true);
+        CommunicationRequest communicationRequest3 = buildCommRequestNotActionedResponseDateOffset(-1, true);
         DynamicListItem dynamicListItem1 = new DynamicListItem(communicationRequest1.getId(), "item1");
         DynamicListItem dynamicListItem2 = new DynamicListItem(communicationRequest2.getId(), "item2");
         DynamicListItem dynamicListItem3 = new DynamicListItem(communicationRequest3.getId(), "item3");
-        DynamicList dynamicList = new DynamicList(dynamicListItem1, List.of(dynamicListItem1, dynamicListItem2, dynamicListItem3));
+        DynamicMixedChoiceList dynamicList = new DynamicMixedChoiceList(List.of(dynamicListItem1),
+            List.of(dynamicListItem1, dynamicListItem2, dynamicListItem3));
         FtaCommunicationFields communicationFields = FtaCommunicationFields.builder()
             .tribunalRequestType(TribunalRequestType.REVIEW_TRIBUNAL_REPLY)
-            .tribunalRequestRespondedDl(dynamicList)
+            .ftaRequestsToReviewDl(dynamicList)
             .tribunalCommunications(List.of(communicationRequest3, communicationRequest2, communicationRequest1))
             .build();
         sscsCaseData.setCommunicationFields(communicationFields);
@@ -590,36 +517,25 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         List<CommunicationRequest> resultComs = response.getData().getCommunicationFields().getTribunalCommunications();
         assertNotNull(resultComs);
         assertEquals(3, resultComs.size());
-        assertEquals(YesNo.NO, resultComs.getFirst().getValue().getRequestReply().getReplyHasBeenActioned());
-        assertEquals(YesNo.NO, resultComs.get(1).getValue().getRequestReply().getReplyHasBeenActioned());
-        assertEquals(YesNo.YES, resultComs.getLast().getValue().getRequestReply().getReplyHasBeenActioned());
-        assertEquals(LocalDate.now().minusYears(1), response.getData().getCommunicationFields().getFtaResponseProvidedDate());
+        assertEquals(YesNo.NO, resultComs.getFirst().getValue().getRequestReply().getReplyHasBeenActionedByFta());
+        assertEquals(YesNo.NO, resultComs.get(1).getValue().getRequestReply().getReplyHasBeenActionedByFta());
+        assertEquals(YesNo.YES, resultComs.getLast().getValue().getRequestReply().getReplyHasBeenActionedByFta());
+        assertEquals(LocalDate.now().minusYears(1), response.getData().getCommunicationFields().getTribunalResponseProvidedDate());
     }
 
     @Test
     void shouldHandleReviewTribunalReplyWithNewReviewStillNeeded() {
-        CommunicationRequest communicationRequest1 = CommunicationRequest.builder()
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActioned(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now().plusYears(1)).build()).build()).build();
-        CommunicationRequest communicationRequest2 = CommunicationRequest.builder()
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActioned(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now()).build()).build()).build();
-        CommunicationRequest communicationRequest3 = CommunicationRequest.builder()
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActioned(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now().minusYears(1)).build()).build()).build();
+        CommunicationRequest communicationRequest1 = buildCommRequestNotActionedResponseDateOffset(1, true);
+        CommunicationRequest communicationRequest2 = buildCommRequestNotActionedResponseDateOffset(0, true);
+        CommunicationRequest communicationRequest3 = buildCommRequestNotActionedResponseDateOffset(-1, true);
         DynamicListItem dynamicListItem1 = new DynamicListItem(communicationRequest1.getId(), "item1");
         DynamicListItem dynamicListItem2 = new DynamicListItem(communicationRequest2.getId(), "item2");
         DynamicListItem dynamicListItem3 = new DynamicListItem(communicationRequest3.getId(), "item3");
-        DynamicList dynamicList = new DynamicList(dynamicListItem3, List.of(dynamicListItem1, dynamicListItem2, dynamicListItem3));
+        DynamicMixedChoiceList dynamicList = new DynamicMixedChoiceList(Collections.singletonList(dynamicListItem3),
+            List.of(dynamicListItem1, dynamicListItem2, dynamicListItem3));
         FtaCommunicationFields communicationFields = FtaCommunicationFields.builder()
             .tribunalRequestType(TribunalRequestType.REVIEW_TRIBUNAL_REPLY)
-            .tribunalRequestRespondedDl(dynamicList)
+            .ftaRequestsToReviewDl(dynamicList)
             .tribunalCommunications(List.of(communicationRequest1, communicationRequest2, communicationRequest3))
             .build();
         sscsCaseData.setCommunicationFields(communicationFields);
@@ -630,9 +546,9 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         List<CommunicationRequest> resultComs = response.getData().getCommunicationFields().getTribunalCommunications();
         assertNotNull(resultComs);
         assertEquals(3, resultComs.size());
-        assertEquals(YesNo.NO, resultComs.getFirst().getValue().getRequestReply().getReplyHasBeenActioned());
-        assertEquals(YesNo.NO, resultComs.get(1).getValue().getRequestReply().getReplyHasBeenActioned());
-        assertEquals(YesNo.YES, resultComs.getLast().getValue().getRequestReply().getReplyHasBeenActioned());
-        assertEquals(LocalDate.now(), response.getData().getCommunicationFields().getFtaResponseProvidedDate());
+        assertEquals(YesNo.NO, resultComs.getFirst().getValue().getRequestReply().getReplyHasBeenActionedByFta());
+        assertEquals(YesNo.NO, resultComs.get(1).getValue().getRequestReply().getReplyHasBeenActionedByFta());
+        assertEquals(YesNo.YES, resultComs.getLast().getValue().getRequestReply().getReplyHasBeenActionedByFta());
+        assertEquals(LocalDate.now(), response.getData().getCommunicationFields().getTribunalResponseProvidedDate());
     }
 }
